# reti-callio

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
callio/: call.py  call_campaign_dial.py  callio.py  callio_controller.py  callio_repo.py  callio_service.py  contact.py  customer.py
db/: bigquery.py
tasks/: cloud_tasks.py  tasks_service.py
test/: test_units.py
utils/: utils.py
